--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+reqwest = "0.12.5"
 serde = {version = "1.0.203", features = ["derive"]}
 serde_json = "1.0.117"
 tokio = { version = "1", features = ["full"] }
